Fix: wrap team members

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -114,24 +114,6 @@ header h1 :hover {
     display: block;
   }
 
-  .team-container {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .team-member img {
-    width: 80px;
-    height: 80px;
-  }
-
-  .team-member h3 {
-    font-size: 1rem;
-  }
-
-  .team-member-links a {
-    font-size: 1rem;
-  }
-
   #venue {
     padding: 1em 0.5em;
     margin: 1em 0;
@@ -751,7 +733,7 @@ footer a:hover {
 
 .team-container {
   display: flex;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  flex-wrap: wrap;
   gap: 1.5rem;
   padding: 2rem;
   background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);
